--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
       --ui-panel-bg: #4a2418;   /* dunkel-rotbraun */
       --ui-text: #ead7be;       /* hellbeige */
 
-      --ui-top-h: 138px;        /* ✅ gewünschter oberer Rand */
-
       --kippstrip-h: auto;
 
       /* ✅ UI-Cell (= Boardbreite/8) wird per JS gesetzt */
@@ -56,43 +54,21 @@
       margin:0;
       display:flex;
       justify-content:center;
-      background:
-        radial-gradient(ellipse at center, rgba(0,0,0,0.00) 40%, rgba(0,0,0,0.38) 100%),
-        linear-gradient(180deg, rgba(0,0,0,0.20), rgba(0,0,0,0.00) 18%, rgba(0,0,0,0.00) 82%, rgba(0,0,0,0.22)),
-        repeating-linear-gradient(
-          90deg,
-          rgba(0,0,0,0.10) 0px,
-          rgba(0,0,0,0.10) 2px,
-          rgba(255,255,255,0.04) 2px,
-          rgba(255,255,255,0.04) 56px
-        ),
-        repeating-linear-gradient(
-          12deg,
-          rgba(0,0,0,0.05) 0px,
-          rgba(0,0,0,0.05) 8px,
-          rgba(255,255,255,0.03) 8px,
-          rgba(255,255,255,0.03) 16px
-        ),
-        linear-gradient(180deg, #e0b47c, #c89259);
-      background-attachment: fixed;
+      background: #4A2418; /* ✅ Tischfläche ersetzt durch Vollfläche */
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
 
     .stage{
-  width: min(94vw, 680px);
-
-  /* ✅ Verschiebung nach unten weg */
-  margin-top: 0;
-
-  /* ✅ kleiner “sicherer” Abstand oben (optional, aber sinnvoll am Handy) */
-  padding-top: calc(var(--ui-top-h) + 8px);
-  padding-bottom: 2vh;
-  display:flex;
-  flex-direction: column;
-  gap: 12px;
-  justify-content:flex-start;
-  align-items:center;
-}
+      width: min(94vw, 680px);
+      margin-top: 0;
+      padding-top: 8px;     /* ✅ kein Topstripe-Padding mehr */
+      padding-bottom: 2vh;
+      display:flex;
+      flex-direction: column;
+      gap: 12px;
+      justify-content:flex-start;
+      align-items:center;
+    }
 
     /* ===== HEADER ===== */
     .titleRow{
@@ -159,33 +135,19 @@
       text-overflow: ellipsis;
     }
 
-    /* ===== BOX SHELL (ohne Rand, ohne Schatten nach Süden) ===== */
+    /* ===== BOX SHELL (✅ jetzt mit umlaufendem 4px Rahmen) ===== */
     .boxShell{
       width: 100%;
       box-sizing: border-box;
       background: transparent;
-      border: 0;
+      border: 4px solid var(--box-black); /* ✅ Boxshell-Rahmen */
       border-radius: var(--box-radius);
-      box-shadow: none;        /* ✅ Schatten unter rotbraunem Panel weg */
+      box-shadow: none;
       overflow: hidden;
       display:flex;
       flex-direction: column;
       gap: 0;
     }
-
-    /* ✅ Oberer Rand: 138px, volle Breite, dunkelbraun, ohne Rahmen */
-    .topStrip{
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: var(--ui-top-h);
-  background: var(--ui-panel-bg);
-  border: 0;
-  box-shadow: none;
-  z-index: 9999;
-  pointer-events: none;
-}
 
     .board{
       position:relative;
@@ -198,11 +160,7 @@
       border-radius: 0;
       overflow: visible;
 
-      /* ✅ schwarzer Rahmen NUR ums Board (ändert keine Layout-Breite) */
-      outline: var(--box-border) solid var(--box-black);
-      outline-offset: 0;
-
-      /* ✅ Board darf Schatten haben – Panel unten NICHT */
+      /* ✅ Board-Schatten bleibt */
       box-shadow:
         10px 18px 42px rgba(0,0,0,0.55),
         3px 6px 16px rgba(0,0,0,0.35);
@@ -896,7 +854,6 @@
 
     <div class="titleRow" aria-label="Titelzeile">
       <button id="backBtn" class="navBtn" aria-label="Zurück zur Speed-Einstellung" type="button">
-        <!-- ✅ genormtes Icon, beige -->
         <svg viewBox="0 0 24 24" aria-hidden="true">
           <path d="M15 5L8 12l7 7"></path>
         </svg>
@@ -905,7 +862,6 @@
       <div class="titleMain"><h1>KIPP COLOR</h1></div>
 
       <button id="exitBtnTop" class="navBtn" aria-label="Spiel beenden" type="button">
-        <!-- ✅ genormtes X, beige -->
         <svg viewBox="0 0 24 24" aria-hidden="true">
           <path d="M6 6l12 12M18 6L6 18"></path>
         </svg>
@@ -913,8 +869,6 @@
     </div>
 
     <div class="boxShell" id="boxShell" aria-label="BoxShell">
-      <!-- ✅ oberer 138px Rand -->
-      <div class="topStrip" aria-hidden="true"></div>
 
       <div class="board" id="board">
         <div class="floor" aria-hidden="true"></div>
