--- a/index.html
+++ b/index.html
@@ -50,14 +50,25 @@
 
     html, body { height: 100%; }
 
-    /* ✅ außen wieder "Holz/Tisch", innen (stage) braun */
+    /* ✅ NEUE Tischfläche (ersetzt alten Gesamthintergrund) */
     body{
       margin:0;
       display:flex;
       justify-content:center;
+
+      /* Tisch / Holz */
       background:
-        radial-gradient(120% 90% at 20% 10%, rgba(255,255,255,0.08), rgba(255,255,255,0) 55%),
-        radial-gradient(120% 90% at 80% 85%, rgba(0,0,0,0.25), rgba(0,0,0,0) 55%),
+        radial-gradient(120% 80% at 18% 12%, rgba(255,255,255,0.10), rgba(255,255,255,0) 60%),
+        radial-gradient(120% 90% at 80% 88%, rgba(0,0,0,0.35), rgba(0,0,0,0) 60%),
+        /* feine Holzmaserung */
+        repeating-linear-gradient(
+          92deg,
+          rgba(0,0,0,0.10) 0px,
+          rgba(0,0,0,0.10) 6px,
+          rgba(255,255,255,0.03) 6px,
+          rgba(255,255,255,0.03) 16px
+        ),
+        /* breite Holzmaserung */
         repeating-linear-gradient(
           18deg,
           rgba(0,0,0,0.10) 0px,
@@ -65,7 +76,9 @@
           rgba(255,255,255,0.03) 14px,
           rgba(255,255,255,0.03) 30px
         ),
-        linear-gradient(180deg, #6d412d, #513022 60%, #462718);
+        /* Grundton */
+        linear-gradient(180deg, #5b3626, #4c2b1f 55%, #3e2218);
+
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
 
@@ -161,10 +174,35 @@
       border: 0;                 /* ✅ kein Rahmen */
       border-radius: var(--box-radius);
       box-shadow: none;
-      overflow: hidden;
+      overflow: visible;
       display:flex;
       flex-direction: column;
       gap: 0;
+
+      position: relative; /* ✅ für Nord/Süd Schatten */
+    }
+
+    /* ✅ Nord/Süd Schlagschatten auf Dunkelbraun */
+    .boxShell::before,
+    .boxShell::after{
+      content:"";
+      position:absolute;
+      left: 0;
+      width: 100%;
+      height: 18px;
+      pointer-events:none;
+      z-index: 50;
+      opacity: 0.95;
+    }
+    .boxShell::before{
+      top: -12px;
+      background: linear-gradient(to bottom, rgba(0,0,0,0.45), rgba(0,0,0,0.00));
+      filter: blur(0.2px);
+    }
+    .boxShell::after{
+      bottom: -12px;
+      background: linear-gradient(to top, rgba(0,0,0,0.45), rgba(0,0,0,0.00));
+      filter: blur(0.2px);
     }
 
     .board{
@@ -991,9 +1029,9 @@
           <div class="gameConsole">
             <div class="gcBottom" aria-label="Aktionen">
 
-              <!-- ✅ 42px runter + SCHAU GENAU! + Button -->
+              <!-- ✅ 42px runter + Hinweistext + Button -->
               <div class="previewBlock" aria-label="Vorschau-Block">
-                <div class="previewHint">SCHAU GENAU!</div>
+                <div id="previewHint" class="previewHint">SCHAU GENAU!</div>
                 <button id="btnSetNumbers" class="gcBtn set" type="button">VORSCHAU-KIPPS</button>
               </div>
 
@@ -1072,6 +1110,9 @@
     const btnLevelTrainee = document.getElementById("btnLevelTrainee");
     const btnLevelBrainy  = document.getElementById("btnLevelBrainy");
     const btnLevelBrain   = document.getElementById("btnLevelBrain");
+
+    /* ✅ Hint-Element (wird bei Levelauswahl versteckt) */
+    const previewHintEl = document.getElementById("previewHint");
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
@@ -1278,6 +1319,8 @@
       speedMode.classList.remove("hidden");
       gameMode.classList.add("hidden");
       if(scorePanel) scorePanel.classList.add("hidden");
+      /* Hint wieder sichtbar */
+      if(previewHintEl) previewHintEl.classList.remove("hidden");
       enterSpeedAttention();
       setPlayGlyph(false);
     }
@@ -1290,6 +1333,9 @@
       btnSetNumbers.classList.remove("hidden");
       decisionPanel.classList.add("hidden");
       levelPanel.classList.add("hidden");
+
+      /* Hint normal sichtbar im GameMode */
+      if(previewHintEl) previewHintEl.classList.remove("hidden");
 
       /* ✅ nach OK blinkt der Vorschau-Kipps Button */
       enterSetAttention();
@@ -1418,6 +1464,9 @@
       btnSetNumbers.classList.add("hidden");
       decisionPanel.classList.add("hidden");
       levelPanel.classList.remove("hidden");
+
+      /* ✅ SCHAU GENAU! weg bei Levelauswahl */
+      if(previewHintEl) previewHintEl.classList.add("hidden");
 
       setAttentionSet(false);
       setAttentionPlay(false);
@@ -1716,6 +1765,8 @@
     /* ✅ Button blinkt NUR bis zum ersten Klick */
     btnSetNumbers.addEventListener("click", async () => {
       setAttentionSet(false);  /* ✅ Blink AUS ab jetzt */
+      /* Hint wieder sichtbar während Vorschau-Phase */
+      if(previewHintEl) previewHintEl.classList.remove("hidden");
       await runSetNumbersCycle();
     });
 
