--- a/index.html
+++ b/index.html
@@ -274,55 +274,8 @@
     .trot-left   { --trot: -90deg; }
     .trot-right  { --trot: 90deg; }
 
-    /* ===== Overlay "ZWEITES KIPPZIEL" ===== */
-    .goalOverlay{
-      position:absolute;
-      inset: 0;
-      z-index: 20;
-      pointer-events:none;
-      display:none;
-      align-items:center;
-      justify-content:center;
-    }
-    .goalOverlay.show{ display:flex; }
-
-    /* ✅ Animation wird per JS gesetzt (1s Pop) */
-    .goalCard{
-      width: min(92%, 520px);
-      text-align:center;
-      padding: 10px 12px;
-      box-sizing:border-box;
-      transform: scale(0.72);
-      opacity: 0;
-      filter: drop-shadow(0 14px 26px rgba(0,0,0,0.55));
-    }
-    @keyframes goalPop{
-      0%   { transform: scale(0.70); opacity: 0; }
-      75%  { transform: scale(1.03); opacity: 1; }
-      100% { transform: scale(1.00); opacity: 1; }
-    }
-    .goalMain{
-      font-weight: 1000;
-      letter-spacing: 0.10em;
-      text-transform: uppercase;
-      font-size: clamp(18px, 6.2vmin, 40px);
-      line-height: 1.02;
-      text-shadow:
-        0 1px 0 rgba(0,0,0,0.35),
-        0 12px 18px rgba(0,0,0,0.35);
-      /* ✅ fix: immer lesbar/beige */
-      color: var(--ui-text);
-    }
-    .goalSub{
-      margin-top: 6px;
-      font-weight: 1000;
-      letter-spacing: 0.06em;
-      text-transform: lowercase;
-      font-size: clamp(14px, 4.6vmin, 18px);
-      opacity: 0.95;
-      text-shadow: 0 1px 0 rgba(0,0,0,0.35);
-      color: var(--ui-text);
-    }
+    /* ===== Overlay "ZWEITES KIPPZIEL" (wird NICHT mehr verwendet) ===== */
+    .goalOverlay{ display:none !important; }
 
     /* ===== FLOOR ===== */
     .floor{
@@ -769,10 +722,38 @@
     .gcBtn{ flex: 1 1 0; border: 1px solid rgba(0,0,0,0.35); background: var(--btn-bg); color: var(--btn-text); font-weight: 1000; letter-spacing: 0.06em; text-transform: uppercase; padding: 12px 12px; border-radius: 12px; cursor: pointer; box-shadow: 0 10px 18px rgba(0,0,0,0.25), 0 0 0 1px rgba(255,255,255,0.15) inset; user-select: none; -webkit-tap-highlight-color: transparent; }
     .gcBtn:active{ transform: translateY(1px) scale(0.99); filter: brightness(0.97); }
 
-    #decisionPanel{ padding: 0 12px; box-sizing: border-box; }
+    #decisionPanel{ padding: 0 12px; box-sizing: border-box; transform: translateY(-20px); } /* ✅ 20 px weiter rauf (gen Norden) */
 
-    .kippCountTitle{ font-weight: 1000; letter-spacing: 0.10em; text-transform: uppercase; color: var(--ui-text); text-shadow: 0 1px 0 rgba(0,0,0,0.35); font-size: clamp(18px, 5.6vmin, 34px); line-height: 0.95; text-align: left; user-select:none; margin-top: 6px; margin-bottom: 10px; }
-    .kippStatus{ font-weight: 1000; letter-spacing: 0.08em; text-transform: uppercase; color: var(--ui-text); text-shadow: 0 1px 0 rgba(0,0,0,0.35); font-size: clamp(12px, 3.9vmin, 16px); line-height: 1.05; margin-bottom: 10px; user-select:none; }
+    /* ✅ Schreibweise ist wichtig -> KEIN uppercase erzwingen */
+    .kippCountTitle{
+      font-weight: 1000;
+      letter-spacing: 0.10em;
+      color: var(--ui-text);
+      text-shadow: 0 1px 0 rgba(0,0,0,0.35);
+      font-size: clamp(18px, 5.6vmin, 34px);
+      line-height: 0.95;
+      text-align: left;
+      user-select:none;
+      margin-top: 6px;
+      margin-bottom: 10px;
+      text-transform: none;
+    }
+    .kippStatus{
+      font-weight: 1000;
+      letter-spacing: 0.08em;
+      color: var(--ui-text);
+      text-shadow: 0 1px 0 rgba(0,0,0,0.35);
+      font-size: clamp(12px, 3.9vmin, 16px);
+      line-height: 1.05;
+      margin-bottom: 10px;
+      user-select:none;
+      text-transform: none;
+    }
+
+    /* ✅ "...KIPP-ZIEL" in random Zielfarbe */
+    .kippGoalWord{
+      font-weight: 1000;
+    }
 
     @keyframes blinkSoft{ 0%, 100% { opacity: 1; } 50% { opacity: 0.35; } }
     @keyframes pulseSoft{ 0%, 100% { transform: scale(1); } 50% { transform: scale(1.06); } }
@@ -891,7 +872,7 @@
         <div class="floor" aria-hidden="true"></div>
         <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-        <!-- ✅ Ziel-Overlay -->
+        <!-- ✅ Ziel-Overlay (wird NICHT mehr verwendet) -->
         <div id="goalOverlay" class="goalOverlay" aria-hidden="true">
           <div id="goalCard" class="goalCard">
             <div id="goalMain" class="goalMain">ERSTES KIPPZIEL</div>
@@ -977,8 +958,8 @@
               </div>
 
               <div id="decisionPanel" class="hidden">
-                <div class="kippCountTitle" id="kippTitle">KIPPANZAHL WÄHLEN</div>
-                <div class="kippStatus" id="kippStatus">TIPPE AUF EINE TASTE</div>
+                <div class="kippCountTitle" id="kippTitle">KIPP Anzahl wählen</div>
+                <div class="kippStatus" id="kippStatus">Tippe auf eine Taste</div>
 
                 <!-- ✅ 3 Tasten: 3 / 6 / 9 -->
                 <div class="gcRow" aria-label="Kippanzahl">
@@ -1488,14 +1469,27 @@
       return "trot-bottom";
     }
 
-    function showTargetAtCoord(coord, n){
+    /* ✅ Zielzahl muss auf allen 4 gleichfärbigen Zielfarbenfeldern sein. */
+    function showTargetOnAllSameColor(colorClass, n){
       clearTargets();
-      const cell = Array.from(grid.children).find(el => el.dataset.coord === coord);
-      if(!cell) return;
-      const badge = document.createElement("div");
-      badge.className = "targetBadge " + sideClassForCoord(coord);
-      badge.textContent = String(n);
-      cell.appendChild(badge);
+      Array.from(grid.children).forEach(cell=>{
+        if(!cell.classList.contains("colorCell")) return;
+        if(!cell.classList.contains(colorClass)) return;
+
+        const coord = cell.dataset.coord;
+        const badge = document.createElement("div");
+        badge.className = "targetBadge " + sideClassForCoord(coord);
+        badge.textContent = String(n);
+        cell.appendChild(badge);
+      });
+    }
+
+    function colorRgbForClass(colorClass){
+      if(colorClass === "c-orange")  return getComputedStyle(document.documentElement).getPropertyValue("--orange").trim();
+      if(colorClass === "c-gruen")   return getComputedStyle(document.documentElement).getPropertyValue("--gruen").trim();
+      if(colorClass === "c-violett") return getComputedStyle(document.documentElement).getPropertyValue("--violett").trim();
+      if(colorClass === "c-blau")    return getComputedStyle(document.documentElement).getPropertyValue("--blau").trim();
+      return getComputedStyle(document.documentElement).getPropertyValue("--ui-text").trim();
     }
 
     /* ===== Spielregeln ===== */
@@ -1507,8 +1501,8 @@
     let tryIndex   = 0;
     let points     = 0;
 
-    // ✅ NEU: Ziel ist (ZielCoord, ZielNumber)
-    let currentTargetCoord = null;
+    // ✅ Ziel ist (Zielfarbe, ZielNumber)
+    let currentTargetColor = null;
     let currentTargetNumber = null;
 
     function setPoints(p){
@@ -1517,7 +1511,7 @@
       gcPoints.textContent = "P" + s + "/80";
     }
 
-    // ===== NEU: Koordinaten-Helfer (Rotation) =====
+    // ===== Koordinaten-Helfer (Rotation) =====
     const colToX = {A:1,B:2,C:3,D:4,E:5,F:6,G:7,H:8};
     const xToCol = ["","A","B","C","D","E","F","G","H"];
 
@@ -1541,8 +1535,7 @@
       return makeCoord(x,y);
     }
 
-    // ===== NEU: Unsere 4 sichtbaren Slot-Positionen bei rotIndex=0 =====
-    // Sie entsprechen genau den Klassen s-3b / s-4b / s-2c / s-2d
+    // ===== Unsere 4 sichtbaren Slot-Positionen bei rotIndex=0 =====
     const BASE_SLOT_COORDS = ["3B","4B","2C","2D"]; // Reihenfolge passt zu curr[0..3]
 
     function currentInnerMap(){
@@ -1557,7 +1550,7 @@
       return map;
     }
 
-    // ===== NEU: Ziel-Felder (außen) =====
+    // ===== Ziel-Felder (außen) =====
     const TARGET_COORDS = [
       "3A","4A","5A","6A",
       "3H","4H","5H","6H",
@@ -1575,95 +1568,26 @@
       return null;
     }
 
-    function ordinalDe(k){
+    function ordinalDeTitle(k){
       const map = [
-        "ERSTES","ZWEITES","DRITTES","VIERTES","FÜNFTES",
-        "SECHSTES","SIEBENTES","ACHTES","NEUNTES","ZEHNTES"
+        "Erstes","Zweites","Drittes","Viertes","Fünftes",
+        "Sechstes","Siebentes","Achtes","Neuntes","Zehntes"
       ];
-      if(k === 10) return "LETZTES";
-      if(k >= 1 && k <= 9) return map[k-1];
-      return "NÄCHSTES";
+      if(k >= 1 && k <= 10) return map[k-1];
+      return "Nächstes";
     }
 
-    // ✅ Overlay Timing: 1s Pop + 2s Hold
-    async function showGoalOverlay(roundOneBased){
-      const ord = ordinalDe(roundOneBased);
-      goalMainEl.textContent = ord + " KIPPZIEL";
-      goalSubEl.textContent  = "von zehn";
-
-      goalOverlayEl.classList.add("show");
-      goalCardEl.style.animation = "none";
-      goalCardEl.offsetHeight;
-
-      // 1s grow
-      goalCardEl.style.animation = "goalPop 1000ms ease-out forwards";
-      await sleep(1000);
-      // 2s hold
-      await sleep(2000);
-
-      goalOverlayEl.classList.remove("show");
-    }
-
-    function pickNewTarget(){
-      const inner = currentInnerMap();
-      const visibleNums = Array.from(new Set(Array.from(inner.values())));
-
-      if(visibleNums.length === 0){
-        currentTargetCoord = "3A";
-        currentTargetNumber = 1;
-        showTargetAtCoord(currentTargetCoord, currentTargetNumber);
-        return;
-      }
-
-      // Kandidaten = alle Zielcoords, deren adjacent-inner überhaupt existiert (in unserem aktuellen 4er-map)
-      const candidates = TARGET_COORDS
-        .map(tc => ({ tc, adj: adjacentInnerCoordForTarget(tc) }))
-        .filter(o => o.adj && inner.has(o.adj));
-
-      if(candidates.length === 0){
-        // fallback: irgendein Ziel (zeigt trotzdem) – aber Gameplay ist dann halt schwer
-        currentTargetCoord = TARGET_COORDS[Math.floor(Math.random()*TARGET_COORDS.length)];
-        currentTargetNumber = visibleNums[Math.floor(Math.random()*visibleNums.length)];
-        showTargetAtCoord(currentTargetCoord, currentTargetNumber);
-        return;
-      }
-
-      // wir wählen so, dass es NICHT sofort Treffer ist:
-      let tries = 0;
-      while(tries < 80){
-        const n = visibleNums[Math.floor(Math.random() * visibleNums.length)];
-        const c = candidates[Math.floor(Math.random() * candidates.length)];
-        const hitNow = (inner.get(c.adj) === n);
-        if(!hitNow){
-          currentTargetCoord = c.tc;
-          currentTargetNumber = n;
-          showTargetAtCoord(currentTargetCoord, currentTargetNumber);
-          return;
-        }
-        tries++;
-      }
-
-      // falls wirklich alles sofort Treffer wäre (selten): dann nehmen wir halt eins
-      const n = visibleNums[Math.floor(Math.random() * visibleNums.length)];
-      const c = candidates[Math.floor(Math.random() * candidates.length)];
-      currentTargetCoord = c.tc;
-      currentTargetNumber = n;
-      showTargetAtCoord(currentTargetCoord, currentTargetNumber);
-    }
-
-    // ✅ Treffer NEU: ZielCoord -> adjacent inner coord -> Zahl muss gleich sein
-    function evaluateHit(){
-      if(!currentTargetCoord || currentTargetNumber == null) return false;
-      const inner = currentInnerMap();
-      const adj = adjacentInnerCoordForTarget(currentTargetCoord);
-      if(!adj) return false;
-      return inner.get(adj) === currentTargetNumber;
+    function setGoalInfoText(roundOneBased){
+      const ord = ordinalDeTitle(roundOneBased);
+      const rgb = colorRgbForClass(currentTargetColor);
+      kippTitleEl.innerHTML = `${ord} <span class="kippGoalWord" style="color:${rgb};">KIPP-ZIEL</span> (von zehn)`;
+      kippStatusEl.textContent = "Wähle deine KIPP Anzahl";
     }
 
     function setTryText(){
       if(tryIndex === 0){
-        kippTitleEl.textContent  = "KIPPANZAHL WÄHLEN";
-        kippStatusEl.textContent = "TIPPE AUF EINE TASTE";
+        kippTitleEl.textContent  = "KIPP Anzahl wählen";
+        kippStatusEl.textContent = "Tippe auf eine Taste";
       }else if(tryIndex === 1){
         kippTitleEl.textContent  = "ZWEITER VERSUCH";
         kippStatusEl.textContent = "KIPPANZAHL WÄHLEN";
@@ -1693,6 +1617,71 @@
     }
 
     let busyMove = false;
+
+    function pickNewTarget(){
+      const inner = currentInnerMap();
+      const visibleNums = Array.from(new Set(Array.from(inner.values())));
+
+      // Fallback
+      if(visibleNums.length === 0){
+        currentTargetColor = "c-orange";
+        currentTargetNumber = 1;
+        showTargetOnAllSameColor(currentTargetColor, currentTargetNumber);
+        return;
+      }
+
+      // Kandidaten: Zielfelder, die aktuell im colorMap sind UND deren Adjacent im inner-map existiert
+      const candidates = TARGET_COORDS
+        .map(tc => ({ tc, adj: adjacentInnerCoordForTarget(tc), col: colorMap.get(tc) }))
+        .filter(o => o.col && o.adj && inner.has(o.adj));
+
+      if(candidates.length === 0){
+        // fallback: nimm irgendeine Farbe aus den vorhandenen Ziel-Farben
+        const any = Array.from(new Set(TARGET_COORDS.map(tc=>colorMap.get(tc)).filter(Boolean)));
+        currentTargetColor = any[Math.floor(Math.random()*any.length)] || "c-orange";
+        currentTargetNumber = visibleNums[Math.floor(Math.random()*visibleNums.length)];
+        showTargetOnAllSameColor(currentTargetColor, currentTargetNumber);
+        return;
+      }
+
+      // Wähle so, dass NICHT sofort Treffer ist
+      let tries = 0;
+      while(tries < 80){
+        const n = visibleNums[Math.floor(Math.random() * visibleNums.length)];
+        const c = candidates[Math.floor(Math.random() * candidates.length)];
+        const hitNow = (inner.get(c.adj) === n);
+        if(!hitNow){
+          currentTargetColor = c.col;
+          currentTargetNumber = n;
+          showTargetOnAllSameColor(currentTargetColor, currentTargetNumber);
+          return;
+        }
+        tries++;
+      }
+
+      // Notfall
+      const n = visibleNums[Math.floor(Math.random() * visibleNums.length)];
+      const c = candidates[Math.floor(Math.random() * candidates.length)];
+      currentTargetColor = c.col;
+      currentTargetNumber = n;
+      showTargetOnAllSameColor(currentTargetColor, currentTargetNumber);
+    }
+
+    function evaluateHit(){
+      if(!currentTargetColor || currentTargetNumber == null) return false;
+      const inner = currentInnerMap();
+
+      // Treffer, wenn an irgendeinem der 4 gleichfärbigen Zielfelder
+      // die adjacent-inner Zahl exakt die Zielzahl ist.
+      for(const tc of TARGET_COORDS){
+        const col = colorMap.get(tc);
+        if(col !== currentTargetColor) continue;
+        const adj = adjacentInnerCoordForTarget(tc);
+        if(!adj) continue;
+        if(inner.get(adj) === currentTargetNumber) return true;
+      }
+      return false;
+    }
 
     async function performKippCW(count){
       if(busyMove) return;
@@ -1735,7 +1724,7 @@
         }
 
         pickNewTarget();
-        await showGoalOverlay(roundIndex + 1);
+        setGoalInfoText(roundIndex + 1);
 
       }else{
         tryIndex++;
@@ -1754,7 +1743,7 @@
           }
 
           pickNewTarget();
-          await showGoalOverlay(roundIndex + 1);
+          setGoalInfoText(roundIndex + 1);
         }
       }
 
@@ -1792,7 +1781,34 @@
       startPulse();
       setButtonsEnabled(true);
 
-      showGoalOverlay(1);
+      // ✅ KEINE Einblendung im Boxinneren.
+      // Nach Treffer / nach drittem gescheiterten Versuch kommt die Info in den zwei Zeilen.
+      setGoalInfoText(1);
+      setTryText();
+    }
+
+    /* ===== Rest deiner Logik unverändert ===== */
+
+    function renderWEmpty(){
+      setRotationSnap();
+      for(let i=0;i<4;i++) renderNumber(slotTargetsW[i], null);
+    }
+
+    function renderKipEmpty(){
+      setRotationSnap();
+      for(let i=0;i<4;i++){
+        renderNumber(slotTargetsKipRight[i], null);
+        renderNumber(slotTargetsKipLeft[i], null);
+      }
+    }
+
+    function resetToW1Q0_Empty(){
+      rotIndex = 0;
+      faceIndex = 0;
+      setRotationSnap();
+      clearAllNumbers();
+      showW();
+      renderWEmpty();
     }
 
     speedSlider.addEventListener("input", () => {
