Neue Datei Box_v2.png

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       z-index: 2;
       pointer-events: none;
 
-      background-image: url("Box.png");
+      background-image: url("Box_v2.png");
       background-repeat: no-repeat;
       background-position: center;
       background-size: 100% 100%;
